# type-erasure

./: .gitignore  CMakeLists.txt  README.md
type-erasure/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  shape.h  square.cpp  square.h
